--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-tooltip": "^1.2.4",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
+    "@tabler/icons-react": "^3.34.1",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "apexcharts": "^4.7.0",
@@ -35,6 +36,7 @@
     "date-fns": "^3.6.0",
     "framer-motion": "^12.18.1",
     "lucide-react": "^0.487.0",
+    "motion": "^12.23.3",
     "next": "15.3.0",
     "next-themes": "^0.4.6",
     "node-fetch": "^3.3.2",
@@ -45,7 +47,7 @@
     "react-hook-form": "^7.56.1",
     "recharts": "^2.15.3",
     "sonner": "^2.0.3",
-    "tailwind-merge": "^3.2.0",
+    "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.2.5",
     "zod": "^3.24.3"
   },
