--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tooltip": "^1.2.4",
+    "@stripe/stripe-js": "^8.3.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
     "@tabler/icons-react": "^3.34.1",
@@ -37,7 +38,7 @@
     "framer-motion": "^12.18.1",
     "lucide-react": "^0.487.0",
     "motion": "^12.23.3",
-    "next": "15.3.0",
+    "next": "^15.5.6",
     "next-themes": "^0.4.6",
     "node-fetch": "^3.3.2",
     "react": "^18.2.0",
@@ -47,6 +48,7 @@
     "react-hook-form": "^7.56.1",
     "recharts": "^2.15.3",
     "sonner": "^2.0.3",
+    "stripe": "^19.2.0",
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.2.5",
     "zod": "^3.24.3"
