--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
     "@tabler/icons-react": "^3.34.1",
+    "@use-gesture/react": "^10.3.1",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "apexcharts": "^4.7.0",
@@ -46,6 +47,8 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.56.1",
+    "react-spring": "^10.0.3",
+    "react-use-gesture": "^9.1.3",
     "recharts": "^2.15.3",
     "sonner": "^2.0.3",
     "stripe": "^19.2.0",
